scripts/nullaway/wpi/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8.txt
../wpi/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/CTarget.java:478: error: [NullAway] unboxing of a @Nullable value
        int dimensione = mappaDimensioneVettori.get(nome);
                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:568: error: [NullAway] dereferenced expression parametriFunzioni.get(nome) is @Nullable
        if (parametriFunzioni.get(nome).endsWith("V")) {
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:586: error: [NullAway] unboxing of a @Nullable value
        costante(dimensioneVettori.get(nome));
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:586: error: [NullAway] passing @Nullable parameter 'dimensioneVettori.get(nome)' where @NonNull is required
        costante(dimensioneVettori.get(nome));
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/JasminTarget.java:594: error: [NullAway] dereferenced expression parametriFunzioni.get(nome) is @Nullable
        if (!parametriFunzioni.get(nome).endsWith("V")) {
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/url8c14fd53ee_luca89_itaco_tgz-pJ8-main_RunnerJ8/src/compilatore/RubyTarget.java:447: error: [NullAway] unboxing of a @Nullable value
        int dimensione = mappaDimensioneVettori.get(nome);
                                                   ^
    (see http://t.uber.com/nullaway )
6 errors
